--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "socketServer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node socketServer.js"
   },
-  "author": "",
+  "author": "Arne Reijntjes",
   "license": "ISC",
   "dependencies": {
     "node-osc": "^4.1.8",
